--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,69 @@
-# Compiled class file
-*.class
+Skip to content
+This repository
+Search
+Pull requests
+Issues
+Marketplace
+Explore
+ @sbernal93
+ Sign out
+ Watch 2,286
+  Star 56,977
+  Fork 25,113 github/gitignore
+ Code  Pull requests 160  Projects 0  Insights
+Branch: master Find file Copy pathgitignore/Global/Eclipse.gitignore
+0674ff5  on Mar 28
+@raeglan raeglan .project and .classpath should be inside VC
+22 contributors @sherzodv @tyutyutyu @shiftkey @aroben @Utumno @sveyret @segfly @drasolka @rlee287 @raeglan @mimibar @fhemberger @leandrodeleite @jcarsique @harshadsabne @gAmUssA @DenisGorbachev @pangratz @defunkt @arinto @apetresc @alexkaratarakis
+RawBlameHistory    
+51 lines (37 sloc)  684 Bytes
 
-# Log file
-*.log
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
 
-# BlueJ files
-*.ctxt
+# External tool builders
+.externalToolBuilders/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
